# linear-regression

./: pyproject.toml
linear_regression/: linear_regression.ipynb
tests/: test_linear_regression.py
