[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["hunter britten <huntergbritten@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-watch = "^4.2.0"
matplotlib = "^3.4.2"
sklearn = "^0.0"
seaborn = "^0.11.1"
ipykernel = "^5.5.5"
pandas = "^1.2.4"
numpy = "^1.20.3"
statsmodels = "^0.12.2"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
